document-paper & subprocessor-card styles - + Reduced the corner radius on both to tighten up the look. + Reduced border thickness on document-paper. + Increased top margin and decreased bottom margin so the subprocessor cards appear equally spaced, but with more breathing room under the main heading and the correct amount of whitespace between the last card and the bottom of the document-paper container element.

--- a/style.css
+++ b/style.css
@@ -332,8 +332,8 @@ th {
     flex-direction: column;
     background-color: rgba(247, 251, 253, 0.8);
     outline: 2px ridge #aaa;
-    border-radius: 8px;
-    margin: 20px 0px;
+    border-radius: 5px;
+    margin: 40px 0px 10px 0px;
     padding-bottom: 15px;
     filter: drop-shadow(3px 3px 2px rgba(0,0,0,0.3));
     /* These lines are required to make the ::before pseudo-element work */
@@ -386,8 +386,8 @@ th {
 }
 .transparent-document-paper {
     background-color: rgba(255, 255, 255, 0.95);
-    outline: 4px ridge #aaa;
-    border-radius: 10px;
+    outline: 3px ridge #aaa;
+    border-radius: 5px;
     max-width: 800px;
     filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.4));
 }
